--- a/index.html
+++ b/index.html
@@ -601,8 +601,8 @@
       </div>
       <!---->
     </div>
-    <script src=//cdnjs.cloudflare.com/ajax/libs/seedrandom/2.3.10/seedrandom.min.js>
+    <script src=https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.3.10/seedrandom.min.js>
     </script>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
