--- a/index.html
+++ b/index.html
@@ -464,10 +464,10 @@
         color: #fff;
       }
     </style>
-    <link rel="icon" href="/img/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" href="/img/favicon-192x192.png" sizes="192x192" />
-    <link rel="apple-touch-icon" href="/img/favicon-180x180.png" />
-    <meta name="msapplication-TileImage" content="/img/favicon-270x270.png" />
+    <link rel="icon" href="/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="/favicon-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="/favicon-180x180.png" />
+    <meta name="msapplication-TileImage" content="/favicon-270x270.png" />
     <link
       href="https://static.okku.io/workplace/css/chunk-0a1c3d84.2f9a08dc.css"
       rel="prefetch"
